  threads, assigning one task per thread.
- Implemented a GPU-accelerated matrix-free AMR derefinement `GridFunction`
  update operator. This supports mixed geometry meshes and variable order
  spaces, and is the default derefinement operator constructed by
  `FiniteElementSpace::Update` and `ParFiniteElementSpace::Update`.
  The operator requires `FiniteElementSpace::Nonconforming() == true`.

New and updated examples and miniapps
-------------------------------------
- Added miniapps to demonstrate an implementation of the absolute-value
  L(1)-Jacobi preconditioners in partially assembled operators. This includes
  Multigrid wrapper to demonstrate the effectiveness of these Jacobi-type
  operators as smoothers.
  These miniapps can be found in `miniapps/diag-smoothers`.

API changes
-----------
- mfem::internal::tensor and mfem::internal::dual have been moved to
  mfem::future::tensor and mfem::future::dual.
- API addition: in class `Operator`, added virtual functions: `AbsMult`, and
  `AbsMultTranspose`; in class `Vector`, added `Abs` and `Pow`.

Miscellaneous
-------------
- Added the "gpu", "raja-gpu", and "ceed-gpu" backend aliases/shortcuts which
  automatically select between CUDA or HIP.
- The CUDA-specific names used by some of the unit tests like 'cunit_tests' and
  'pcunit_tests' were replaced by names using 'gpu' instead of 'c' (short for
  CUDA) or 'cuda'. These tests automatically run the CUDA/HIP tests based on the
  MFEM build configuration.
- Added the option to enable GPU-aware MPI in MFEM using the environment
  variable 'MFEM_GPU_AWARE_MPI' set to any value. Setting this environment
  variable is an alternative to calling 'Device::SetGPUAwareMPI(true)'.
- Added parallel Address Sanitizer, serial and parallel Undefined Behavior
  Sanitizer and serial Memory Sanitizer GitHub actions tests on Ubuntu.

Version 4.8, released on Apr 9, 2025
====================================

Discretization improvements
---------------------------